Add email challenge auth flows
